Feat/BE/Refactor : Refactor File, Main, Util
File Service / Main Controller, Service / Add AlarmListUtil / Some ErrorCode